fix logo alignment per commit e8de0a9 for webkit browsers

--- a/app/assets/stylesheets/layouts.css
+++ b/app/assets/stylesheets/layouts.css
@@ -186,6 +186,7 @@
 	height: auto !important;
 	top: 50%;
 	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
 	font-size: 1.25em;
 	text-transform: capitalize;
 	text-align: center;
